# Distore

./: .gitignore  README.md  celery.Dockerfile  pyproject.toml  translater.Dockerfile  updater_1c.Dockerfile  web-api.Dockerfile
fastapi-application/: .env.template  docker-compose.yml  main.py  translate.py  update_data_from_1c.py
fastapi-application/alembic/versions/: 2024_07_25_1737-efd81cd6c2fe_add_additional_fields_for_user_table.py  2024_07_26_2047-06a240ab25eb_add_brand_group_and_category_tables.py  2024_07_28_1832-8d591855268b_add_product_table.py  2024_07_28_1841-16ca61352891_set_unique_name_field_for_brand_table.py  2024_08_06_1916-adbfdaabf588_add_created_and_updated_fields_to_.py  2024_08_06_2129-09977edd1d63_add_unique_to_category_name_field.py  2024_08_07_0021-39568c7a009f_add_unique_to_group_name_field.py  2024_08_12_1953-cd94b8e8f1e7_add_carts_and_cart_products_tables.py  2024_08_13_0003-80ba88500234_add_orders_and_order_products_tables.py  2024_08_13_0010-c14e859600fb_change_large_str_fields_type_to_text.py  2024_08_13_0425-c97e67c8e919_add_enum_to_order_status_field.py  2024_09_18_1920-9c5ee2178209_add_uuid_1c_fields.py  2024_09_18_1923-312ab4303c6e_nullable_false_uuid_1c_fields.py  (+41 more)
fastapi-application/api/api_v1/: auth.py  (+14 more)
fastapi-application/core/: celery.py  config.py
fastapi-application/services/: addresses.py  banners.py  brands.py  carts.py  categories.py  delivery.py  driver_1c.py  orders.py  payments.py  products.py  translater.py  uds.py
fastapi-application/utils/: email_sender.py
nginx/: nginx.Dockerfile  nginx.dev.conf  nginx.prod.conf
(+39 files in other folders)
