[tool.poetry]
name = "distore"
version = "0.1.0"
description = ""
authors = ["Erkinumur <erkin.umur94@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
fastapi-mail = "^1.4.1"
fastapi-filter = {extras = ["sqlalchemy"], version = "^2.0.0"}
loguru = "^0.7.2"
sqladmin = {extras = ["full"], version = "^0.20.1"}
celery = "^5.4.0"
flower = "^2.0.1"
redis = "^5.0.8"
requests = "^2.32.3"
grequests = "^0.7.0"
aiofiles = "^24.1.0"
fastapi-storages = "^0.3.0"
pillow = "^10.4.0"
aiohttp = "^3.10.10"
googletrans = "^4.0.2"
xmltodict = "^0.14.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

